issue with css delete word isnt aligned with the other headings

--- a/static/style.css
+++ b/static/style.css
@@ -9,14 +9,9 @@ body {
     background-color: rgba(236, 240, 241, 1.0);
 }
 
-
-
-
 .container {
     width: 60vw;
     margin: auto;
-    /*background-color: rgba(52, 73, 94, 1.0);*/
-    /*color: rgba(236, 240, 241, 1.0);*/
 }
 
 .container::after {
@@ -50,6 +45,11 @@ h3 {
     padding-top: 100px;
     margin-left: 300px;
 }
+
+h4 {
+    text-align: left;
+    margin-top: 20px;
+}
 nav {
     background-color: rgb(232, 31, 39); /* darkest blue */
     text-align: center;
@@ -72,7 +72,7 @@ nav {
 }
 
 nav a {
-    /*margin:0 0.5rem;*/
+    margin:0 0.5rem;
     padding: 0 0.5rem;
     font-size: 1.5rem;
 
@@ -95,16 +95,16 @@ a, a:visited {
 
 
 .myform {
-    width: 80%;
+    width: 100%;
     margin: auto;
-    padding-top: 3rem;
-    display: block;
-    margin-bottom: 20px;
-    padding-bottom: 1rem;
+    border-radius: 5px;
+    padding: 20px;
+    border: 5px;
 }
 
 .form-group {
     padding-top: 3rem;
+    margin-bottom: 15px;
 }
 
 .form-label {
@@ -171,7 +171,7 @@ form button {
 }
 
 form button:hover {
-    background-color: #e81f27;
+    background-color: #0056b3;
 }
 
 /* Style for the images in the table */
@@ -182,3 +182,8 @@ table img {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+
+footer {
+    text-align: center;
+    margin-top: 20px;
+}
